--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 animate-in-left col-4">
+        <div class="col-6 col-lg-3 animate-in-left col-4">
           <img src="assets/images/Member-1.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
           <h3 class="mb-0 py-2">
             <b>WU TIANJIAN</b>
