Fixed a small problem in index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="row mx-auto">
         <div class="col-md-12">
           <h3 class="display-3">Vision </h3>
-          <p class="text-justify p-3 m-1 lead"> Nowadays indoor fitness becomes more normally around us. Through the long-term research and analysis. Scientist find that playing music while exercising can improve the result of fitness. It’s not only makes the speed of metabolism, burning
+          <p class="text-justify lead py-3 my-1"> Nowadays indoor fitness becomes more normally around us. Through the long-term research and analysis. Scientist find that playing music while exercising can improve the result of fitness. It’s not only makes the speed of metabolism, burning
             of fat faster but also exercise the endurance of the practitioner, improve self-confidence.
             <br>By the way, different exercising should match up different music rhythm. Consider to people who have no enough time to go to the Gym after work or study, Fitness Partner (F.P.) creating a good atmosphere while you doing fitness at home. According
             to the heart beats of user, the system can play the different music with suitable rhythm. All the music are divided to different kinds.&nbsp;
