update some changes on website.

--- a/index.html
+++ b/index.html
@@ -256,10 +256,8 @@
               <i>Smart LEDS:</i> To light the room with different color.
               <br>
               <br> </li>
-            <li class="text-left">
-              <b>Interface:&nbsp;
-                <br> </b>
-              <i>Smart Phones:</i> Using an application to interact with users. </li>
+            <li class="text-left"> <strong>Interface:&nbsp; <br>
+            </strong> <em>Smart Phones:</em> Using an application which can let users change the music and light color. </li>
           </ul>
           <h1 class="text-left text-secondary py-3">Software architecture:</h1>
           <ul class="">
@@ -306,34 +304,30 @@
                   </tr>
                 </thead>
                 <tbody>
+                  <tr> </tr>
                   <tr>
                     <td>1</td>
-                    <td>The sensor should detect people who enter the room.</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
                     <td>The sensor should sense and measure the user's heart beats rate.</td>
                     <td>1</td>
                   </tr>
                   <tr>
-                    <td>3</td>
+                    <td> 2</td>
                     <td>The system should store the user data for example: heart beats information, music, presets</td>
                     <td>2</td>
                   </tr>
                   <tr>
-                    <td>4</td>
-                    <td>Check and analyse the data to get better user experience.</td>
+                    <td> 3</td>
+                    <td>Analysing the data to get better choices on user's liked music and light's colors.</td>
                     <td>1</td>
                   </tr>
                   <tr>
-                    <td>5</td>
+                    <td> 4</td>
                     <td>Feedback to the speaker and LED lights according to different presets.</td>
                     <td>1</td>
                   </tr>
                   <tr>
-                    <td>6</td>
-                    <td>The user can&nbsp;interact with the system by using the smartphone application.</td>
+                    <td> 5</td>
+                    <td>The user can&nbsp;change light's color, music and provide prefereneces by using designed smartphone application.</td>
                     <td>1</td>
                   </tr>
                 </tbody>
@@ -343,9 +337,8 @@
           <h1 class="my-3">Hardware Components</h1>
           <ol class="p-4">
             <li class="my-1 text-left">Computer (OTS)</li>
-            <li class="my-1 text-left">Movement sensor</li>
-            <li class="my-1 text-left">Smart LED</li>
-            <li class="my-1 text-left">Smart band</li>
+            <li class="my-1 text-left">Philips Hue</li>
+            <li class="my-1 text-left">Fitbit Charge</li>
             <li class="my-1 text-left">Scaled down model (may be need a lego scene?)</li>
             <li class="my-1 text-left">Speaker: laptop built-in speaker&nbsp;(OTS)</li>
           </ol>
