Update team member and test video

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
-  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+  <link rel="icon" href="assets/images/web-icon.ico">
   <title>Fitness Partner</title>
   <meta name="description" content="Free Bootstrap 4 Pingendo Aquamarine template for unique events.">
   <meta name="keywords" content="Pingendo conference event aquamarine free template bootstrap 4">
@@ -64,6 +64,16 @@
           <h1 class="display-4 d-block d-md-none">Conference Pingendo</h1>
           <h1>Give you a better private gym enviroment.</h1>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 my-4">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/s1p129vnYxg?autoplay=0" allowfullscreen="" width="800" height="600
+600"> </iframe>
+          </div>
+        </div>
+        <div class="col-md-3"></div>
       </div>
     </div>
   </div>
@@ -256,8 +266,10 @@
               <i>Smart LEDS:</i> To light the room with different color.
               <br>
               <br> </li>
-            <li class="text-left"> <strong>Interface:&nbsp; <br>
-            </strong> <em>Smart Phones:</em> Using an application which can let users change the music and light color. </li>
+            <li class="text-left">
+              <strong>Interface:&nbsp;
+                <br> </strong>
+              <em>Smart Phones:</em> Using an application which can let users change the music and light color. </li>
           </ul>
           <h1 class="text-left text-secondary py-3">Software architecture:</h1>
           <ul class="">
@@ -361,7 +373,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 col-lg-3 animate-in-left col-4 my-3">
+        <div class="col-6 col-lg-4 animate-in-left col-4 my-3">
           <img src="assets/images/Member-1.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
           <h3 class="mb-0 py-2">
             <b>WU TIANJIAN</b>
@@ -376,7 +388,7 @@
           </div>
           <p class="text-muted p-1">Programmer and S/W developer</p>
         </div>
-        <div class="col-6 col-lg-3 my-3">
+        <div class="col-6 col-lg-4 my-3">
           <img src="assets/images/Member-2.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
           <h3 class="mb-0 py-2">FENG SHENGJIE</h3>
           <p>294778144@qq.com</p>
@@ -389,7 +401,7 @@
           </div>
           <p class="text-muted p-1">Programmer and S/W developer</p>
         </div>
-        <div class="col-6 col-lg-3 my-3">
+        <div class="col-6 col-lg-4 my-3 animate-in-right">
           <img src="assets/images/Member-3.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
           <h3 class="mb-0 py-2">JIA ZIRUI</h3>
           <p> jzruirui@gmail.com</p>
@@ -402,19 +414,6 @@
           </div>
           <p class="text-muted p-1">H/W designer and Physical designer</p>
         </div>
-        <div class="col-6 col-lg-3 animate-in-right my-3">
-          <img src="assets/images/Member-4.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
-          <h3 class="mb-0 py-2">WANG YUHONG</h3>
-          <p>s206975@studenti.polito.it</p>
-          <div class="row">
-            <div class="col-md-12">
-              <a target="_blank" href="https://github.com/wangyuhong666" title="GitHub">
-                <i target="_blank" class="fa fa-3x fa-github text-light"></i>
-              </a>
-            </div>
-          </div>
-          <p class="text-muted p-1">H/W designer and hardware management</p>
-        </div>
       </div>
     </div>
   </div>
@@ -425,8 +424,10 @@
         <div class="col-md-12">
           <h1 class="text-left m-2">Open issues</h1>
           <ul class="">
-            <li class="text-left my-2">The strategies for computers to act when the user's heartbeat ratio changes.</li>
-            <li class="text-left my-2">Need to learn the API to communicate with the LEDS and .</li>
+            <li class="text-left my-2">
+              <s>The strategies for computers to act when the user's heartbeat ratio changes </s>.</li>
+            <li class="text-left my-2">
+              <s>Need to learn the API to communicate with the LEDS and </s>.</li>
             <li class="text-left my-2">Develop the application for smartphone to interaction.</li>
           </ul>
         </div>
