Update AMI Features information

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   </h4>
                 </div>
               </div>
-              <h5>The system is sentsitive to the heart rates of the user.</h5>
+              <h5>The system can sense the daily of user before fitness and real-time heartbeat rate during the fitness.</h5>
             </div>
             <div class="col-md-6 my-3">
               <div class="row mb-3">
@@ -215,7 +215,7 @@
                   </h4>
                 </div>
               </div>
-              <h5>F.P. is suitable for the users who prefer or have to do exercises at home.</h5>
+              <h5>People who prefer to do fitness in a private space and improve the feeling during the fitness. It only works for one user privately at the same time.</h5>
             </div>
           </div>
         </div>
