Update AMI steps

--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
             </div>
             <div class="col-8">
               <h4 class="mb-3 text-primary">Sensing</h4>
-              <p class="my-1">Using the smartband
-                <br>to detect the heartbeat rate
-                <br>of user.</p>
+              <p class="my-1">Detect the daily heartbeat rate of user by smart band. Use heartbeat sensor to measure the real-time heartbeat.</p>
             </div>
           </div>
         </div>
@@ -122,8 +120,7 @@
             </div>
             <div class="col-8">
               <h4 class="mb-3 text-primary">Reasoning</h4>
-              <p class="my-1">According to sensing detections,&nbsp;
-                <br>is able to analysis and try to find the compatible preset ambient settings. </p>
+              <p class="my-1">Exercising while listening music improve the result of fitness. According to the heartbeat of user, F.P provide the more suitable music during the exercising, The colors of lights in environment change with heartbeat as user like in order to know the state of exercise clearly. It also create a good atmosphere during the fitness. </p>
             </div>
           </div>
         </div>
@@ -136,7 +133,7 @@
             </div>
             <div class="col-8">
               <h4 class="mb-3 text-primary">Interacting&nbsp;</h4>
-              <p class="my-1">The colors of light and music rhythms are regulated automatically by heart rate ,and accelerate the blood circulation in the warm up exercises,the aerobic and anaerobic exercise and recovery conditions after exercise </p>
+              <p class="my-1">Provides the users a mobile application to start the fitness. Customize the total time of fitness, including the warm-up time and the initial light color in different sections. Show the real-time heartbeat rate of user. Auto-play music and change the colors of light in the different sections according to the heartbeat rate of user. Remind user time out or continue the fitness.</p>
             </div>
           </div>
         </div>
@@ -147,9 +144,7 @@
             </div>
             <div class="col-8">
               <h4 class="mb-3 text-primary">Acting</h4>
-              <p class="my-1">The system is able to
-                <br>&nbsp;control LEDS' color and&nbsp;
-                <br>&nbsp;play suitable music.</p>
+              <p class="my-1">The system is able to control LEDS' color. Change or pause the music as user like in the current section of heartbeat rate.</p>
             </div>
           </div>
         </div>
