Update purpose and scope

--- a/index.html
+++ b/index.html
@@ -281,12 +281,13 @@
           <div class="row">
             <div class="col-md-12 my-4">
               <h1 contenteditable="true" class="my-5">Purpose and scope </h1>
-              <p class="text-justify p-1">The Purpose of our system is to create a good atmosphere for the indoor fitness with music and light. The main problem to be solved is that we should define 3 sections about the heart beats of user during the fitness to matching the suitable
-                music and light. Refer to the heart beats of a normal adult each minute.&nbsp;
-                <br>We define 3 sections according to calmness state, aerobic state and anaerobic&nbsp;(e.g. 60-100,100-150,150-200). We collect different kinds of music and divided it in rhythm (slow rhythm-medium rhythm-quick rhythm). And also matching
-                colour of LEDS with 3 different types (e.g. blue-green-orange).
-                <br>
-                <br> </p>
+              <p class="text-justify p-1">The Purpose of our system is that improve the result of fitness(speed of metabolism, burning of fat faster ) and create a good atmosphere for the indoor fitness with music and light. 
+                <br>Firstly, the system recognizes the specific user and receive the rest heartbeat rate the last one week from user’s smart band to define the initial data.
+                <br>User starts to warm-up, the system receives the command to play the random suitable music in warm-up heartbeat rate.At the same time,the system counting down with the value user set before.
+                <br>It started the official fitness state when the warm-up is time out.According to the heartbeat rate during the fitness,the system compare the data with the initial data to match up the music from users’ data base and light suit for the change of rate.
+				<br>The colors changing of LED has 3 sections as music playing(anaerobic exercise,aerobic exercise,maximum heartbeat rate state).The colors changing of LED with the purpose of making users know about their sate of exercise directly.It will be a good atmosphere during the fitness. It also can define the colors of light and music as user like any time.
+				<br>The system can be control to stop or not any time.At the end of fitness,the music stop playing and the light turn off.
+			  </p>
               <h1 class="my-5">Project features </h1>
               <table class="table" style="color:white;">
                 <thead>
